# OligoClaude

./: CLAUDE.md  README.md  pyproject.toml  server.py
config/: SETD5_e1.json  SETD5_e2.json  SMN2.json
data/: alphagenome_ontology_terms.meta.txt  alphagenome_ontology_terms.tsv
scripts/: fetch_ontology_terms.py
src/oligoclaude/: __init__.py  alphagenome_predict.py  aso_enum.py  cli.py  config.py  core.py  credentials.py  genome_fetch.py  mcp_server.py  output.py  plot.py  predict.py  resources.py  spliceai_fetch.py  spliceai_predict.py  workflow.py
src/oligomcp/: __init__.py  cli.py  config.py  mcp_server.py  output.py  predict.py  resources.py  workflow.py
tests/: test_aso_enum.py  test_bed_export.py  test_config.py  test_experimental.py  test_sequence_utils.py
