[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oligomcp"
version = "0.1.0"
description = "ASO efficacy prediction via AlphaGenome + SpliceAI, served as an MCP"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Baek-Donghyeon" }]
dependencies = [
    "alphagenome",
    "torch>=2.2",
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "biopython>=1.83",
    "pyfaidx>=0.8",
    "tqdm>=4.66",
    "fastmcp>=2.12",
    # Note: the `openspliceai` package is NOT a runtime dep — we vendor its
    # pure-torch `SpliceAI` class in `oligomcp._spliceai_model` to avoid
    # its heavy transitive deps (`mappy` needs gcc; `pysam` has no Windows
    # wheels). Pretrained weights ship bundled (`_spliceai_weights/*.pt`).
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.scripts]
oligomcp = "oligomcp.cli:main"
oligomcp-mcp = "oligomcp.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
oligomcp = [
    "py.typed",
    "_spliceai_weights/*.pt",
]
